Fix comment feature/13